csv_parser/antlr_generated/CsvParser.py
# Generated from Csv.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CsvParser ( Parser ):

    grammarFileName = "Csv.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "INTEGER", "FLOAT", "NEWLINE", "SEPARATOR", 
                      "WHITESPACE" ]

    RULE_csv = 0
    RULE_line = 1
    RULE_cell = 2
    RULE_field = 3

    ruleNames =  [ "csv", "line", "cell", "field" ]

    EOF = Token.EOF
    INTEGER=1
    FLOAT=2
    NEWLINE=3
    SEPARATOR=4
    WHITESPACE=5

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CsvContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CsvParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CsvParser.LineContext)
            else:
                return self.getTypedRuleContext(CsvParser.LineContext,i)


        def getRuleIndex(self):
            return CsvParser.RULE_csv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCsv" ):
                listener.enterCsv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCsv" ):
                listener.exitCsv(self)




    def csv(self):

        localctx = CsvParser.CsvContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_csv)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 9 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 8
                self.line()
                self.state = 11 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CsvParser.INTEGER) | (1 << CsvParser.FLOAT) | (1 << CsvParser.SEPARATOR) | (1 << CsvParser.WHITESPACE))) != 0)):
                    break

            self.state = 13
            self.match(CsvParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEPARATOR(self, i:int=None):
            if i is None:
                return self.getTokens(CsvParser.SEPARATOR)
            else:
                return self.getToken(CsvParser.SEPARATOR, i)

        def cell(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CsvParser.CellContext)
            else:
                return self.getTypedRuleContext(CsvParser.CellContext,i)


        def NEWLINE(self):
            return self.getToken(CsvParser.NEWLINE, 0)

        def getRuleIndex(self):
            return CsvParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = CsvParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 16
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        self.state = 15
                        self.cell()


                    self.state = 18
                    self.match(CsvParser.SEPARATOR)

                else:
                    raise NoViableAltException(self)
                self.state = 21 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 24
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 23
                self.cell()


            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CsvParser.NEWLINE:
                self.state = 26
                self.match(CsvParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CellContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CsvParser.WHITESPACE)
            else:
                return self.getToken(CsvParser.WHITESPACE, i)

        def field(self):
            return self.getTypedRuleContext(CsvParser.FieldContext,0)


        def getRuleIndex(self):
            return CsvParser.RULE_cell

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCell" ):
                listener.enterCell(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCell" ):
                listener.exitCell(self)




    def cell(self):

        localctx = CsvParser.CellContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_cell)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 29
                self.match(CsvParser.WHITESPACE)


            self.state = 33
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 32
                self.field()


            self.state = 36
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 35
                self.match(CsvParser.WHITESPACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(CsvParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(CsvParser.FLOAT, 0)

        def getRuleIndex(self):
            return CsvParser.RULE_field

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField" ):
                listener.enterField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField" ):
                listener.exitField(self)




    def field(self):

        localctx = CsvParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            _la = self._input.LA(1)
            if not(_la==CsvParser.INTEGER or _la==CsvParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





